feat: create house
