# docs/swagger.json
@@ -4,6 +4,58 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/house": {
+            "post": {
+                "description": "Create a new house",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "house"
+                ],
+                "summary": "Create a new house",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "house",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/house.CreateHouseRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.CreateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/transactions": {
             "get": {
                 "description": "Get a list of all transactions",
@@ -338,6 +390,14 @@
                 }
             }
         },
+        "house.CreateHouseRequest": {
+            "type": "object",
+            "properties": {
+                "terms": {
+                    "type": "boolean"
+                }
+            }
+        },
         "schemas.TransactionResponse": {
             "type": "object",
             "properties": {
@@ -378,12 +438,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "transactions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schemas.TransactionResponse"
-                    }
                 }
             }
         },
@@ -405,7 +459,7 @@
                 "description": {
                     "type": "string"
                 },
-                "user_id": {
+                "house_id": {
                     "type": "integer"
                 }
             }
